--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -19,6 +19,7 @@
             android:id="@+id/about_libs_holder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:tag=":aesthetic_ignore"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
 </android.support.design.widget.CoordinatorLayout>
