--- a/app/src/main/res/layout/song.xml
+++ b/app/src/main/res/layout/song.xml
@@ -26,7 +26,7 @@
             android:focusable="true"
             android:layout_margin="-16dp"
             android:padding="16dp"
-            android:tint="?attr/secondaryTextColor"
+            android:tint="?android:textColorPrimary"
             android:src="@drawable/ic_overflow_dark"
             tools:ignore="ContentDescription"/>
 
