Contextual menus on song items * Better than recreating a popupmenu every time tie button is pressed * Fix some warnings * Remove search again (super inefficent) * Cleanup some libraries

--- a/app/src/main/res/layout/song.xml
+++ b/app/src/main/res/layout/song.xml
@@ -7,18 +7,10 @@
                 tools:ignore="Overdraw">
 
     <ImageView
-            android:id="@+id/song_overflow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/unbounded_ripple"
-            android:focusable="true"
-            android:layout_margin="-16dp"
-            android:padding="16dp"
-            android:tint="?android:textColorPrimary"
-            android:src="@drawable/ic_overflow_dark"
-            tools:ignore="ContentDescription"/>
+            android:id="@+id/song_art"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:contentDescription="@string/album"/>
 
     <LinearLayout
             android:id="@+id/song_text_holder"
@@ -27,8 +19,7 @@
             android:layout_centerVertical="true"
             android:orientation="vertical"
             android:paddingStart="16dp"
-            android:paddingEnd="0dp"
-            android:layout_toStartOf="@id/playing_bar_action">
+            android:paddingEnd="16dp">
         <TextView
                 android:id="@+id/song_item_name"
                 style="@style/TitleText"/>
