--- a/app/src/main/res/layout/album.xml
+++ b/app/src/main/res/layout/album.xml
@@ -11,7 +11,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         <ImageView
-                android:id="@+id/album_art"
+                android:id="@+id/art"
                 android:src="@drawable/default_art"
                 android:transitionName="albumArt"
                 android:scaleType="centerCrop"
@@ -27,14 +27,14 @@
             android:background="@color/cardBackground"
             android:id="@+id/text_holder">
         <TextView
-                android:id="@+id/album_name"
+                android:id="@+id/title"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:textColor="@color/primaryTextDark"
                 style="@style/TitleText"/>
 
         <TextView
-                android:id="@+id/album_info"
+                android:id="@+id/desc"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentBottom="true"
                 android:textColor="@color/secondaryTextDark"
